--- a/secrets.nix.example
+++ b/secrets.nix.example
@@ -12,4 +12,11 @@
     vpnPassword = "your-vpn-password-here";
   };
   initialPassword = "your-initial-password-here";
+      
+  cloudflare = {
+      email = "your-email@example.com";          # Your Cloudflare login email
+      apiToken = "your-api-token";               # Cloudflare API token
+      myDomainName = "mydomain.name";            # e.g., mydomain.name
+      cloudMyDomainName = "cloud.mydomain.name"; # e.g., cloud.mydomain.name
+    };
 }
